Google CSE test4

--- a/_includes/google-search.html
+++ b/_includes/google-search.html
@@ -1,3 +1,4 @@
+<div id="landing-search">
 <script>
   (function() {
     var cx = '002847422874721320632:rfhn5huo-js';
@@ -9,4 +10,5 @@
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search></gcse:search>
+<gcse:search enableAutoComplete="true"></gcse:search>
+</div>
