--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -29,6 +29,7 @@
 @import "minimal-mistakes/navigation";
 @import "minimal-mistakes/footer";
 @import "minimal-mistakes/syntax";
+@import "minimal-mistakes/search";
 
 /* Utility classes */
 @import "minimal-mistakes/utilities";
