--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -6,7 +6,7 @@
    Google CSE
    ========================================================================== */
 
-#google-search {
+#landing-search {
     max-width: 500px;
     margin: auto;
 }
