--- a/_includes/google-search.html
+++ b/_includes/google-search.html
@@ -10,5 +10,5 @@
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:search enableAutoComplete="true"></gcse:search>
+<gcse:search></gcse:search>
 </div>
