--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -5,6 +5,13 @@
 /*
    Google CSE
    ========================================================================== */
+input.gsc-search-button-v2 {
+       height: 26px !important;
+       margin-top: 0 !important;
+       min-width: 13px !important;
+       padding: 5px 26px !important;
+       width: 68px !important;
+   }
 
 #landing-search {
     max-width: 500px;
