Landing page updated

--- a/_sass/minimal-mistakes/_search.scss
+++ b/_sass/minimal-mistakes/_search.scss
@@ -13,7 +13,7 @@ input.gsc-search-button-v2 {
        width: 68px !important;
    }
 
-#landing-search {
-    max-width: 500px;
+#searchbar {
+    max-width: 1000px;
     margin: auto;
 }
