Math Support Implemented

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,7 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<script>  
+<script>
   document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
 </script>
 
@@ -32,3 +32,7 @@
 <![endif]-->
 
 <meta http-equiv="cleartype" content="on">
+
+<script type="text/javascript"
+  src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
