--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -33,13 +33,13 @@ $header-font-family         : $serif !default;
 $caption-font-family        : $sans-serif !default;
 
 /* type scale */
-$type-size-1                : 2.441em !default;  // ~39.056px
+$type-size-1                : 2.441em !default;  // ~39.056px. title on front page
 $type-size-2                : 1.953em !default;  // ~31.248px
-$type-size-3                : 1.563em !default;  // ~25.008px
-$type-size-4                : 1.25em !default;   // ~20px
-$type-size-5                : 1em !default;      // ~16px
-$type-size-6                : 0.75em !default;   // ~12px
-$type-size-7                : 0.6875em !default; // ~11px
+$type-size-3                : 1.563em !default;  // ~25.008px titles on posts
+$type-size-4                : 1.25em !default;   // ~20px subtitle on front page
+$type-size-5                : 1em !default;      // ~16px "start learning" on front page
+$type-size-6                : 0.75em !default;   // ~12px sidebar and front page index titles
+$type-size-7                : 0.6875em !default; // ~11px bottom bar
 $type-size-8                : 0.625em !default;  // ~10px
 
 
