--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -51,3 +51,15 @@
    });
 </script>
 {% endif %}
+
+<script src="https://unpkg.com/mermaid@11.4.0/dist/mermaid.min.js"></script>
+<script>
+  $(document).ready(function () {
+    mermaid.initialize({
+      startOnLoad:true,
+      theme: "default",
+    });
+    window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+  });
+</script>
+ 
